# rewrite-experiments

./: .gitmodules  Cargo.toml  README.md  build_tvm.sh  env  pyproject.toml
.github/workflows/: rust.yml
metamodel/: extract.py  op.py  pyproject.toml
metamodel/amalthea/ecore/: amalthea.ecore  amalthea.genmodel
metamodel/amalthea/model/: __init__.py  model.py
metamodel/amalthea/xcore/: amalthea.xcore.bak
rewrite-eqsat/: Cargo.toml
rewrite-eqsat/src/: analysis.rs  language.rs  lib.rs  main.rs  rules.rs  tvm.rs
rewrite-eqsat/tests/: generate_tests.py  tvm_parse_ir.rs
rewrite-py/: Cargo.toml  pyproject.toml
rewrite-py/src/: lib.rs
rewrite_egg/: Cargo.toml
rewrite_egg/src/: analysis.rs  language.rs  lib.rs  main.rs  rules.rs
