[tool.poetry]
name = "rewrites"
version = "0.1.0"
description = ""
authors = ["Christoph Gerum <christoph.gerum@uni-tuebingen.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^1.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
