[tool.poetry]
name = "rewrites"
version = "0.1.0"
description = ""
authors = ["Christoph Gerum <christoph.gerum@uni-tuebingen.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^1.12.0"
tvm = {path = "thirdparty/tvm/python"}
pytest = "^7.2.1"



[tool.poetry.group.dev.dependencies]
maturin = "^0.14.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
