[tool.poetry]
name = "rewrite-metamodel"
version = "0.1.0"
description = "A metamodel and model generator for tensor graph rewrites"
authors = ["Christoph Gerum <christoph.gerum@uni-tuebingen.de>"]
readme = "README.md"
packages = [{include = "rewrite_metamodel"}]

[tool.poetry.dependencies]
python = "^3.10"
pyecore = "^0.13.0"
requests = "^2.31.0"
pyecoregen = "^0.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
