[package]
name = "rewrite_eqsat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
docopt = "1.1.1"
egg = { version = "0.9.1", features = ["coin_cbc", "reports", "lp"] }
ilog = "0.1.4"
itertools = "0.10.5"
ndarray = { version = "0.15.6", features = ["rayon", "serde"] }
rand = "0.8.5"
rayon = "1.6.1"
serde = { version = "1.0.151", features = ["serde_derive"] }


