[package]
name = "rewrite_eqsat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
docopt = "1.1.1"
egg = { version = "0.9.1", features = ["coin_cbc", "lp"] }
ilog = "0.1.4"
itertools = "0.10.5"
ndarray = { version = "0.15.6"}
rand = "0.8.5"
rayon = {version="1.6.1", optional = true}
serde = { version = "1.0.151", features = ["serde_derive"] }
tvm = { path = "../thirdparty/tvm/rust/tvm", optional = true }


[features]
default = ["serde", "tvm"]
serde = ["ndarray/serde", "egg/reports"]
rayon = ["dep:rayon", "ndarray/rayon"]
tvm = ["dep:tvm"]
