[package]
name = "rewrite_egg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egg = { version = "0.9.1", features = ["coin_cbc", "reports", "lp"] }
ndarray = { version = "0.15.6", features = ["rayon", "serde"] }
rand = "0.8.5"
